--- a/syllabus.html
+++ b/syllabus.html
@@ -55,7 +55,8 @@
 		<LI CLASS = "Pdt" ID="RomanzaEasier"><A HREF="./Peridot/Romanza.html"><SPAN LANG="es" STYLE="font-style: italic;">Romanza</SPAN></A></LI>
 		<LI CLASS = "Pdt"><a href="#"><!--I Heard the Bells on Christmas Day--></a></li>
 	<H2 CLASS = "H2Uke" ID="GarnetH2">Level 5: Garnet</H2>
-		<LI CLASS = "Grn"><A HREF="./Garnet/BransleDePoitou.html"><SPAN LANG="fr" STYLE="font-style: italic;">Bransle de Poitou</SPAN></A></LI>
+		<LI CLASS = "Grn" ID="BransleDePoitou"><A HREF="./Garnet/BransleDePoitou.html"><SPAN LANG="fr" STYLE="font-style: italic;">Bransle de Poitou</SPAN></A></LI>
+		<LI CLASS = "Grn" ID="Contredanse"><A HREF="./Garnet/Contredanse.html"><SPAN LANG="fr" STYLE="font-style: italic;">Contredanse</SPAN></A></LI>
 	<H2 CLASS = "H2Uke" ID="AmethystH2">Level 6:  Amethyst</H2>
 		<LI CLASS = "Ams" ID="Roud230Harder"><A HREF="./Amethyst/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
 	<H2 CLASS = "H2Uke" ID="AquamarineH2">Level 7:  Aquamarine</H2>
