--- a/Garnet/BransleDePoitou.html
+++ b/Garnet/BransleDePoitou.html
@@ -15,7 +15,7 @@
 				<div id="myDropdown" class="dropdown-content">
 					<A HREF="../index.html">Home</a>
 					<A HREF="../songlist.html#BransleDePoitou">Songs</a>
-					<A HREF="../syllabus.html#0000Am7">Syllabus</a>
+					<A HREF="../syllabus.html#BransleDePoitou">Syllabus</a>
 					<HR>
 					<A HREF="./ScaleCMajor.html">Prev</A>
 					<A HREF="./Chord0000(Am7).html">Next</A>
