--- a/songlist.html
+++ b/songlist.html
@@ -156,10 +156,27 @@ function myFunction() {
 	<tr id="Roud230">
 		<td data-label="Link"><A HREF="./Amethyst/WeWishUMerryXmas.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
 		<td data-label="Composer">Anon.</SPAN></td>
-		<td data-label="Song Title"><A HREF="./Amethyst/WeWishUMerryXmas.html"><SPAN LANG="en" STYLE="font-style: normal;font-size:x-large;">We Wish You a Merry Christmas</SPAN></A></td>
+		<td data-label="Song Title"><A HREF="./Amethyst/WeWishUMerryXmas.html"><SPAN LANG="en" STYLE="font-style: normal;font-size:large; font-weight: bold;">We Wish You a Merry Christmas</SPAN></A></td>
 		<td data-label="Genre">Christmas carol</td>
 		<td data-label="" style="font-size:smaller; text-align: left"><HR>Traditional English. Roud Folk Song Index No. 230. Arrangement by Arthur Sydney Warrell.</td>
 		<td data-label="Level" style="font-size:smaller;">Amethyst <SPAN STYLE="font-size:x-small;">[06]</SPAN></td>
+	</tr>
+	<!--C-->
+	<tr>
+		<td></td>
+		<td data-label="Composer"><SPAN STYLE="font-size:x-large;font-family: 'Fredericka the Great';">C</SPAN></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr id="Contredanse">
+		<td data-label="Link"><A HREF="./Amethyst/WeWishUMerryXmas.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
+		<td data-label="Composer">Ferdinando <SPAN STYLE="font-size: x-small">Maria Meinrado Francesco Pascale Rosario</SPAN> Carulli</SPAN></td>
+		<td data-label="Song Title"><A HREF="./Amethyst/WeWishUMerryXmas.html"><SPAN LANG="fr" STYLE="font-style: italic; font-size:large; font-weight: bold;">Contredanse</SPAN></A></td>
+		<td data-label="Genre">Classical</td>
+		<td data-label="" style="font-size:smaller; text-align: left"><HR>Opus 120. No. 2.  Also known as Country Dance.</td>
+		<td data-label="Level" style="font-size:smaller;">Garnet <SPAN STYLE="font-size:x-small;">[05]</SPAN></td>
 	</tr>
 	<!--H-->
 	<tr>
@@ -173,7 +190,7 @@ function myFunction() {
 	<tr id="HappyBDay">
 		<td data-label="Link"><A HREF="./Opal/HappyBirthday.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
 		<td data-label="Composer">Mildred Jane Hill</SPAN></td>
-		<td data-label="Song Title"><A HREF="./Opal/HappyBirthday.html"><SPAN LANG="en" STYLE="font-style: normal;font-size:x-large;">Happy Birthday to You</SPAN></A></td>
+		<td data-label="Song Title"><A HREF="./Opal/HappyBirthday.html"><SPAN LANG="en" STYLE="font-style: normal;font-size:large; font-weight: bold;">Happy Birthday to You</SPAN></A></td>
 		<td data-label="Genre">Traditional</td>
 		<td data-label="" style="font-size:smaller; text-align: left"><HR>Traditional American.</td>
 		<td data-label="Level" style="font-size:smaller;">Opal <SPAN STYLE="font-size:x-small;">[02]</SPAN></td>
@@ -190,7 +207,7 @@ function myFunction() {
 	<tr id="BransleDePoitou">
 		<td data-label="Link"><A HREF="./Garnet/BransleDePoitou.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
 		<td data-label="Composer">Adrian Le Roy</SPAN></td>
-		<td data-label="Song Title"><A HREF="./Garnet/BransleDePoitou.html"><SPAN LANG="fr" STYLE="font-style: italic;font-size:x-large;">Bransle de Poitou</SPAN></A></td>
+		<td data-label="Song Title"><A HREF="./Garnet/BransleDePoitou.html"><SPAN LANG="fr" STYLE="font-style: italic;font-size:large; font-weight: bold;">Bransle de Poitou</SPAN></A></td>
 		<td data-label="Genre">Classical</td>
 		<td data-label="" style="font-size:smaller; text-align: left"><HR>Originally composed for guitar in 1552.  Transposed for ukulele.</td>
 		<td data-label="Level" style="font-size:smaller;">Garnet <SPAN STYLE="font-size:x-small;">[05]</SPAN></td>
@@ -207,7 +224,7 @@ function myFunction() {
 	<tr id="JingleBellsChorus">
 		<td data-label="Link"><A HREF="./Pearl/JingleBellsChorus.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
 		<td data-label="Composer">James Lord Pierpont</SPAN></td>
-		<td data-label="Song Title"><A HREF="./Pearl/JingleBellsChorus.html"><SPAN STYLE="font-size:x-large;">Jingle Bells</SPAN></A></td>
+		<td data-label="Song Title"><A HREF="./Pearl/JingleBellsChorus.html"><SPAN STYLE="font-size:large; font-weight: bold;">Jingle Bells</SPAN></A></td>
 		<td data-label="Genre">Secular holiday song</td>
 		<td data-label="" style="font-size:smaller; text-align: left"><HR>Traditional American. Originally the song was entitled "One Horse Open Sleigh."</td>
 		<td data-label="Level" style="font-size:smaller;">Pearl <SPAN STYLE="font-size:x-small;">[01]</SPAN></td>
@@ -215,6 +232,6 @@ function myFunction() {
 </tbody>  
 </table>
 </DIV>
-<script language="javascript" type="text/javascript" src="../footer.txt"></script>
+<script language="javascript" type="text/javascript" src="./footer.txt"></script>
 </BODY>
 </HTML>
