--- a/Pearl/Chord0000.html
+++ b/Pearl/Chord0000.html
@@ -5,7 +5,7 @@
     <META charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 	<META name="keywords" content="C6, added sixth, chord, major, sixth, tab, tablature, uke, ukulele">
 	<META name="description" content="C major added sixth (C6) chord, as played on ukulele.">
-	<LINK rel="stylesheet" type="text/css" href="../stylesheet.css"> 
+	<LINK rel="stylesheet" type="text/css" href="../../stylesheet.css"> 
 </HEAD>
 <BODY CLASS="PearlBody">
 <DIV CLASS="PearlNavBar">
