--- a/syllabus.html
+++ b/syllabus.html
@@ -43,28 +43,36 @@
 		<LI CLASS = "Prl" ID="CMajorPearl"><A HREF="./Pearl/ScaleCMajor.html">Scale in C</A></LI>
 		<LI CLASS = "Prl" ><A HREF="./Pearl/JingleBellsChorus.html">Jingle Bells</A></LI>
 		<LI CLASS = "Prl" ID="0000Am7"><A HREF="./Pearl/Chord0000(Am7).html">Am7 Chord</A></LI>
-		<LI CLASS = "Prl" ><A href="#"><!--Scale on C<SUP>&sharp;</SUP>--></A></LI>
+	<!--Draft-->	<LI CLASS = "Prl" ><A href="#"><!--Scale on C<SUP>&sharp;</SUP>--></A></LI>
 	<H2 CLASS = "H2Uke" ID="OpalH2">Level 2:  Opal</H2>
-		<LI CLASS = "Opl"><A href="#"><!--Scale on D--></A></LI>
-		<LI CLASS = "Opl"><A href="#"><!--Dipidu--></A></LI>
+	<!--Draft-->	<LI CLASS = "Opl"><A href="#"><!--Scale on D--></A></LI>
+	<!--Draft-->	<LI CLASS = "Opl"><A href="#"><!--Dipidu--></A></LI>
 		<LI CLASS = "Opl" ID="HappyBday"><A HREF="./Opal/HappyBirthday.html">Happy Birthday to You</A></LI>
-		<LI CLASS = "Opl" ID="Roud230Easy"><A HREF="./Opal/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
+	<!--Draft-->	<LI CLASS = "Opl" ID="Roud230Easy"><A HREF="./Opal/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
 	<H2 CLASS = "H2Uke" ID="TurquoiseH2">Level 3:  Turquoise</H2>
-		<LI CLASS = "Trq" ID="0000"><A HREF="#"><!--C6 Chord--></A></LI>
+	<!--Draft-->	<LI CLASS = "Trq" ID=""><A HREF="#"><!--C6 Chord--></A></LI>
+		<LI CLASS = "Trq" ID="Amen"><A HREF="./Turquoise/Amen.html">Amen</A></LI>
 	<H2 CLASS = "H2Uke" ID="PeridotH2">Level 4:  Peridot</H2>
 		<LI CLASS = "Pdt" ID="RomanzaEasier"><A HREF="./Peridot/Romanza.html"><SPAN LANG="es" STYLE="font-style: italic;">Romanza</SPAN></A></LI>
-		<LI CLASS = "Pdt"><a href="#"><!--I Heard the Bells on Christmas Day--></a></li>
+	<!--Draft-->	<LI CLASS = "Pdt"><a href="#"><!--I Heard the Bells on Christmas Day--></a></li>
+	<!--Draft-->	<LI CLASS = "Pdt" ID="Entertainer"><A HREF="./Peridot/Entertainer.html"><SPAN LANG="en" STYLE="font-style: normal;">The Entertainer</SPAN></A></LI>
 	<H2 CLASS = "H2Uke" ID="GarnetH2">Level 5: Garnet</H2>
 		<LI CLASS = "Grn" ID="BransleDePoitou"><A HREF="./Garnet/BransleDePoitou.html"><SPAN LANG="fr" STYLE="font-style: italic;">Bransle de Poitou</SPAN></A></LI>
 		<LI CLASS = "Grn" ID="Contredanse"><A HREF="./Garnet/Contredanse.html"><SPAN LANG="fr" STYLE="font-style: italic;">Contredanse</SPAN></A></LI>
-	<H2 CLASS = "H2Uke" ID="AmethystH2">Level 6:  Amethyst</H2>
-		<LI CLASS = "Ams" ID="Roud230Harder"><A HREF="./Amethyst/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
-	<H2 CLASS = "H2Uke" ID="AquamarineH2">Level 7:  Aquamarine</H2>
-		<LI CLASS = "Aqm"><a href="#"><!--Last Post--></a></li>
-	<H2 CLASS = "H2Uke" ID="EmeraldH2">Level 8:  Emerald</H2>
-		<LI CLASS = "Emr"><a href="#"><!--TBD--></a></li>
-	<H2 CLASS = "H2Uke" ID="TopazH2">Level 9:  Topaz</H2>
-		<LI CLASS = "Tpz" ID="RomanzaHarder"><A HREF="./Topaz/Romanza.html"><SPAN LANG="es" STYLE="font-style: italic;">Romanza</SPAN></A></LI>
+	<!--Draft--><H2 CLASS = "H2Uke" ID="AmethystH2">Level 6:  Amethyst</H2>
+	<!--Draft-->	<LI CLASS = "Ams" ID="Roud230Harder"><A HREF="./Amethyst/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
+	<!--Draft--><H2 CLASS = "H2Uke" ID="AquamarineH2">Level 7:  Aquamarine</H2>
+	<!--Draft-->	<LI CLASS = "Aqm"><a href="#"><!--Last Post--></a></li>
+	<!--Draft--><H2 CLASS = "H2Uke" ID="EmeraldH2">Level 8:  Emerald</H2>
+	<!--Draft-->	<LI CLASS = "Emr"><a href="#"><!--TBD--></a></li>
+	<!--Draft--><H2 CLASS = "H2Uke" ID="TopazH2">Level 9:  Topaz</H2>
+	<!--Draft-->	<LI CLASS = "Tpz" ID="RomanzaHarder"><A HREF="./Topaz/Romanza.html"><SPAN LANG="es" STYLE="font-style: italic;">Romanza</SPAN></A></LI>
+	<!--Draft--><H2 CLASS = "H2Uke" ID="SapphireH2">Level 10:  Sapphire</H2>
+	<!--Draft-->	<LI CLASS = "Sph" ID=""><a href="#"><!--TBD--></a></li>	
+	<!--Draft--><H2 CLASS = "H2Uke" ID="RubyH2">Level 11:  Ruby</H2>
+	<!--Draft-->	<LI CLASS = "Rby" ID=""><a href="#"><!--TBD--></a></li>
+	<!--Draft--><H2 CLASS = "H2Uke" ID="DiamondH2">Level 12:  Diamond</H2>
+	<!--Draft-->	<LI CLASS = "Dmd" ID=""><A HREF="./Diamond/FantasiaX.html"><SPAN LANG="es" STYLE="font-style: italic;">Fantasía</SPAN></A></LI>
 </OL>
 <!-- Scripts -->
 <!-- Scripts -->
@@ -108,6 +116,9 @@ function myFunction() {
 	aquamarine = document.getElementById("AquamarineH2");
 	emerald = document.getElementById("EmeraldH2");
 	topaz = document.getElementById("TopazH2");
+	sapphire = document.getElementById("SapphireH2");
+	ruby = document.getElementById("RubyH2");
+	diamond = document.getElementById("DiamondH2");	
     for (i = 0; i < li.length; i++) {
         a = li[i].getElementsByTagName("a")[0];
         txtValue = a.textContent || a.innerText;
@@ -125,6 +136,9 @@ function myFunction() {
 			aquamarine.style.display = "none";
 			emerald.style.display = "none";
 			topaz.style.display = "none";
+			sapphire.style.display = "none";
+			ruby.style.display = "none";
+			diamond.style.display = "none";
         }
     }
 }
