--- a/songlist.html
+++ b/songlist.html
@@ -153,6 +153,22 @@ function myFunction() {
 		<td></td>
 		<td></td>
 	</tr>
+	<tr id="Amen">
+		<td data-label="Link"><A HREF="./Turquoise/Amen.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
+		<td data-label="Composer">Anon.</SPAN></td>
+		<td data-label="Song Title"><A HREF="./Turquoise/Amen.html"><SPAN LANG="en" STYLE="font-style: normal;font-size:large; font-weight: bold;">Amen</SPAN></A></td>
+		<td data-label="Genre">Gospel</td>
+		<td data-label="" style="font-size:smaller; text-align: left"><HR>Traditional American.</td>
+		<td data-label="Level" style="font-size:smaller;">Turquoise <SPAN STYLE="font-size:x-small;">[03]</SPAN></td>
+	</tr>
+	<tr id="Roud19236">
+		<td data-label="Link"><A HREF="./Pearl/RowRowRowYourBoat.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
+		<td data-label="Composer">Anon.</SPAN></td>
+		<td data-label="Song Title"><A HREF="./Pearl/RowRowRowYourBoat.html"><SPAN LANG="en" STYLE="font-style: normal;font-size:large; font-weight: bold;">Row, Row, Row Your Boat</SPAN></A></td>
+		<td data-label="Genre">Traditional</td>
+		<td data-label="" style="font-size:smaller; text-align: left"><HR>Traditional English. Roud Folk Song Index No. 19236.</td>
+		<td data-label="Level" style="font-size:smaller;">Pearl <SPAN STYLE="font-size:x-small;">[01]</SPAN></td>
+	</tr>
 	<tr id="Roud230">
 		<td data-label="Link"><A HREF="./Amethyst/WeWishUMerryXmas.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
 		<td data-label="Composer">Anon.</SPAN></td>
@@ -195,6 +211,23 @@ function myFunction() {
 		<td data-label="" style="font-size:smaller; text-align: left"><HR>Traditional American.</td>
 		<td data-label="Level" style="font-size:smaller;">Opal <SPAN STYLE="font-size:x-small;">[02]</SPAN></td>
 	</tr>
+	<!--J-->
+	<tr>
+		<td></td>
+		<td data-label="Composer"><SPAN STYLE="font-size:x-large;font-family: 'Fredericka the Great';">J</SPAN></td>
+		<td></td>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr id="Entertainer">
+		<td data-label="Link"><A HREF="./Peridot/Entertainer.html"><SPAN STYLE="font-size:x-large;">&#10228;</SPAN></A></td>
+		<td data-label="Composer">Scott Joplin</SPAN></td>
+		<td data-label="Song Title"><A HREF="./Peridot/Entertainer.html"><SPAN LANG="en" STYLE="font-style: normal;font-size:large; font-weight: bold;">The Entertainer</SPAN></A></td>
+		<td data-label="Genre">Classical ragtime</td>
+		<td data-label="" style="font-size:smaller; text-align: left"><HR>American.  Copyrighted December 29, 1902.</td>
+		<td data-label="Level" style="font-size:smaller;">Peridot <SPAN STYLE="font-size:x-small;">[04]</SPAN></td>
+	</tr>	
 	<!--L-->
 	<tr>
 		<td></td>
