--- a/syllabus.html
+++ b/syllabus.html
@@ -28,7 +28,7 @@
 			</div>				
 		</DIV>
 	</SPAN>
-		<INPUT type="text" id="myInput" onkeyup="myFunction()" placeholder="&#x1f50d; Search for ..." title="Type in a song, composer, genre or level" CLASS="Gear">
+		<INPUT type="text" id="myInput" onkeyup="myFunction()" placeholder="&#x1f50d; Search for ..." title="Type in a song, composer, genre or level" CLASS="dropbtn">
 </DIV>
 
 <DIV CLASS="Shim">&emsp;</DIV>
@@ -41,23 +41,40 @@
 	<H2 CLASS = "H2Uke" ID="PearlH2">Level 1:  Pearl</H2>
 		<LI CLASS = "Prl" ID="0000"><A HREF="./Pearl/Chord0000.html">C6 Chord</A></LI>
 		<LI CLASS = "Prl" ID="CMajorPearl"><A HREF="./Pearl/ScaleCMajor.html">Scale in C</A></LI>
-		<LI CLASS = "Prl" ><A HREF="./Pearl/JingleBellsChorus.html">Jingle Bells</A></LI>
+		<LI CLASS = "Prl" ID="JingleBellsChorus"><A HREF="./Pearl/JingleBellsChorus.html">Jingle Bells</A></LI>
+		<LI CLASS = "Prl" ID="Roud19236"><A HREF="./Pearl/RowRowRowYourBoat.html">Row, Row, Row Your Boat</A></LI>
 		<LI CLASS = "Prl" ID="0000Am7"><A HREF="./Pearl/Chord0000(Am7).html">Am7 Chord</A></LI>
-
+	<!--Draft-->	<LI CLASS = "Prl" ><A href="#"><!--Scale on C<SUP>&sharp;</SUP>--></A></LI>
 	<H2 CLASS = "H2Uke" ID="OpalH2">Level 2:  Opal</H2>
-
+	<!--Draft-->	<LI CLASS = "Opl"><A href="#"><!--Scale on D--></A></LI>
+	<!--Draft-->	<LI CLASS = "Opl" ID="CMajorOpal"><A href="./Opal/ScaleCMajorTremolando.html">Scale in C</A></LI>
+	<!--Draft-->	<LI CLASS = "Opl"><A href="#"><!--Dipidu--></A></LI>
 		<LI CLASS = "Opl" ID="HappyBday"><A HREF="./Opal/HappyBirthday.html">Happy Birthday to You</A></LI>
-
+	<!--Draft-->	<LI CLASS = "Opl" ID="Roud230Easy"><A HREF="./Opal/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
 	<H2 CLASS = "H2Uke" ID="TurquoiseH2">Level 3:  Turquoise</H2>
-
+	<!--Draft-->	<LI CLASS = "Trq" ID=""><A HREF="#"><!--C6 Chord--></A></LI>
 		<LI CLASS = "Trq" ID="Amen"><A HREF="./Turquoise/Amen.html">Amen</A></LI>
 	<H2 CLASS = "H2Uke" ID="PeridotH2">Level 4:  Peridot</H2>
 		<LI CLASS = "Pdt" ID="RomanzaEasier"><A HREF="./Peridot/Romanza.html"><SPAN LANG="es" STYLE="font-style: italic;">Romanza</SPAN></A></LI>
-	
+	<!--Draft-->	<LI CLASS = "Pdt"><a href="#"><!--I Heard the Bells on Christmas Day--></a></li>
+	<!--Draft-->	<LI CLASS = "Pdt" ID="Entertainer"><A HREF="./Peridot/Entertainer.html"><SPAN LANG="en" STYLE="font-style: normal;">The Entertainer</SPAN></A></LI>
 	<H2 CLASS = "H2Uke" ID="GarnetH2">Level 5: Garnet</H2>
 		<LI CLASS = "Grn" ID="BransleDePoitou"><A HREF="./Garnet/BransleDePoitou.html"><SPAN LANG="fr" STYLE="font-style: italic;">Bransle de Poitou</SPAN></A></LI>
 		<LI CLASS = "Grn" ID="Contredanse"><A HREF="./Garnet/Contredanse.html"><SPAN LANG="fr" STYLE="font-style: italic;">Contredanse</SPAN></A></LI>
-	
+	<!--Draft--><H2 CLASS = "H2Uke" ID="AmethystH2">Level 6:  Amethyst</H2>
+	<!--Draft-->	<LI CLASS = "Ams" ID="Roud230Harder"><A HREF="./Amethyst/WeWishUMerryXmas.html">We Wish You a Merry Christmas</A></LI>
+	<!--Draft--><H2 CLASS = "H2Uke" ID="AquamarineH2">Level 7:  Aquamarine</H2>
+	<!--Draft-->	<LI CLASS = "Aqm"><a href="#"><!--Last Post--></a></li>
+	<!--Draft--><H2 CLASS = "H2Uke" ID="EmeraldH2">Level 8:  Emerald</H2>
+	<!--Draft-->	<LI CLASS = "Emr"><a href="#"><!--TBD--></a></li>
+	<!--Draft--><H2 CLASS = "H2Uke" ID="TopazH2">Level 9:  Topaz</H2>
+	<!--Draft-->	<LI CLASS = "Tpz" ID="RomanzaHarder"><A HREF="./Topaz/Romanza.html"><SPAN LANG="es" STYLE="font-style: italic;">Romanza</SPAN></A></LI>
+	<!--Draft--><H2 CLASS = "H2Uke" ID="SapphireH2">Level 10:  Sapphire</H2>
+	<!--Draft-->	<LI CLASS = "Sph" ID=""><a href="#"><!--TBD--></a></li>	
+	<!--Draft--><H2 CLASS = "H2Uke" ID="RubyH2">Level 11:  Ruby</H2>
+	<!--Draft-->	<LI CLASS = "Rby" ID=""><a href="#"><!--TBD--></a></li>
+	<!--Draft--><H2 CLASS = "H2Uke" ID="DiamondH2">Level 12:  Diamond</H2>
+	<!--Draft-->	<LI CLASS = "Dmd" ID=""><A HREF="./Diamond/FantasiaX.html"><SPAN LANG="es" STYLE="font-style: italic;">Fantasía</SPAN></A></LI>
 </OL>
 
 <!-- Scripts -->
