--- a/Pearl/Chord0000(Am7).html
+++ b/Pearl/Chord0000(Am7).html
@@ -17,8 +17,8 @@
 				<A HREF="../chordlist.html#0000">Chords</a>
 				<A HREF="../syllabus.html#0000Am7">Syllabus</a>
 				<HR>
-				<A HREF="./JingleBellsChorus.html">Prev</A>
-				<A HREF="../Garnet/BransleDePoitou.html">Next</A>
+				<A HREF="./RowRowRowYourBoat.html">Prev</A>
+				<A HREF="../Opal/ScaleCMajorTremolando.html">Next</A>
 				<HR>
 				<A HREF="#" onclick="window.print();return false;">Print</A>
 				<HR>
