--- a/Pearl/JingleBellsChorus.html
+++ b/Pearl/JingleBellsChorus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML LANG="en">
 <HEAD>
-	<TITLE>&#9753; Jingle Bells Chorus[TAB]</TITLE>
+	<TITLE>&#9753; Jingle Bells Chorus[UKE-TAB]</TITLE>
     <META charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
 	<META name="keywords" content="Pierpont, chorus, Christmas, Jingle Bells, holiday, One Horse Open Sleigh, secular, tab, tablature, traditional, ukulele">
 	<META name="description" content="Jingle Bells Chorus, by James Lord Pierpont.  The song was originally entitled as One Horse Open Sleigh.  A traditional American secular holiday song.  Music score in ukulele tablature.">	
@@ -15,10 +15,10 @@
 				<div id="myDropdown" class="dropdown-content">
 					<A HREF="../index.html">Home</a>
 					<A HREF="../songlist.html#JingleBellsChorus">Songs</a>
-					<A HREF="../syllabus.html#0000Am7">Syllabus</a>
+					<A HREF="../syllabus.html#JingleBellsChorus">Syllabus</a>
 					<HR>
 					<A HREF="./ScaleCMajor.html">Prev</A>
-					<A HREF="./Chord0000(Am7).html">Next</A>
+					<A HREF="./RowRowRowYourBoat.html">Next</A>
 					<HR>
 					<A HREF="#" onclick="window.print();return false;">Print</A>
 					<HR>
@@ -386,6 +386,6 @@ In a one-horse open sleigh.<BR />
 </P>
 </DIV>
 </DIV>
-<script language="javascript" type="text/javascript" src="../footer.txt"></script>
+<A HREF="../index.html"><script language="javascript" type="text/javascript" src="../footer.txt"></script></A>
 </BODY>
 </HTML>
