--- a/Opal/ScaleCMajorTremolando.html
+++ b/Opal/ScaleCMajorTremolando.html
@@ -24,7 +24,7 @@
 			</div>
 	</div>
 	<SPAN CLASS = "dropbtn" STYLE="font-family: Acme, san-serif;"><A HREF="../Pearl/ScaleCMajor.html">Easier</A></SPAN>
-	<SPAN CLASS = "NavButtonMid" STYLE="opacity:0"><A HREF="#">Harder</A></SPAN>
+	<SPAN CLASS = "dropbtn" STYLE="font-family: Acme, san-serif;"><A HREF="../Turquoise/ScaleCMajor120BPM.html">Harder</A></SPAN>
 </SPAN>
 <BUTTON ONCLICK="document.getElementById('SettingsModal').style.display='block'" CLASS="Gear">&#x2699;</BUTTON>
 </DIV>
